--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,8 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+################################################################################ 
+# MAC
+################################################################################ 
+.DS_Store
